--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,449 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+
+
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  position: relative;
+  display: flex;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  width: 183px;
+  height: 32px;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.flex-column {
+  max-height: 756;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+
+.header_title__text {
+  width: 730px;
+  margin-left: 64px;
+}
+
+.header_title {
+  display: flex;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bolder;
+  margin:auto;
+  z-index: 2;
+}
+
+.header_subtitle__text {
+  width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+}
+
+.header_subtitle {
+  z-index: 2;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header_link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+
 .header__square-pic {
-  height: 568px;
   width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+/*     ***************     секция проблемы      ***************      */
+
+.content {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+.description {
+  display: flex;
+  margin: auto;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  margin: 100px auto;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+}
+
+.brief_heading {
+  margin: 0;
+  display: flex;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin-top: 0;
+  display: flex;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  font-weight: bolder;
+}
+
+/*   ***************   секция цифры и факты    ***************   */
+
+.digits {
+  display: flex;
+  flex-direction: column;
+}
+
+.digits-title {
+  display: flex;
+  width: 60%;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+}
+
+.digits-title__text {
+  display: flex;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bolder;
+  margin: 0;
+}
+
+.digits-subtitle {
+  display: flex;
+  width: 60%;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+}
+
+.digits-subtitle__text {
+  display: flex;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 20px auto 60px;
+}
+
+.table {
+  display: flex;
+  width: 1100px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: space-between;
+  margin: 0 auto 100px;
+}
+
+.table__cell {
+  display: flex;
+  width: 250px;
+  flex-direction: column;
+}
+
+.table__heading {
+  display: flex;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bolder;
+  margin: 0;
+}
+
+.table__text {
+  display: flex;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+.table_second_row {
+  margin-top: 60px;
+}
+
+/*     ***************     секция фейнман       ***************     */
+
+.feynman {
+  height: 890px;
+  background-color: #f2f2f2;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.feynman__title_box {
+  display: flex;
+  justify-content: center;
+  width: 648px;
+  z-index: 1;
+}
+
+.feynman__title {
+  display: flex;
+  justify-content: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bolder;
+  margin: 100px auto 0;
+  text-align: center;
+}
+
+.feynman__subtitle_box {
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+}
+
+.feynman__subtitle {
+  display: flex;
+  justify-content: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+  margin: 70px auto 0;
+}
+
+.feynman__face_img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  width: 867px;
+  height: 637px;
+  z-index: 0;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  z-index: 2;
+  text-decoration: none;
+}
+
+/*     ***************     секция кауфман     ***************       */
+
+.kaufman {
+  background-color: #1f1f1f;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  position: relative;
+  z-index: -2;
+}
+
+.kaufman-title_theme_dark {
+  display: flex;
+  width: 60%;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+}
+
+.kaufman-title__text_theme_dark {
+  display: flex;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bolder;
+  margin: 90px auto 0;
+}
+
+.kaufman-subtitle_theme_dark {
+  display: flex;
+  width: 60%;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+}
+
+.kaufman-subtitle__text_theme_dark {
+  display: flex;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 20px auto 80px;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+
+.table_theme_dark {
+  display: flex;
+  width: 1100px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: space-between;
+  margin: 0 auto 100px;
+}
+
 .table__cell_theme_dark {
+  display: flex;
   width: 200px;
+  flex-direction: column;
+}
+
+.table__heading_theme_dark {
+  display: flex;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bolder;
+  margin: 20px 0 0;
+}
+
+.table__text_theme_dark {
+  display: flex;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+/*      ***************       футер        ***************      */
+
+.footer {
+  min-width: 1100px;
+  max-width: 1600px;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  box-sizing: border-box;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  color:white; 
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+
+.footer__columns {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  width: 90%;
+  margin: 0 auto 0;
+  padding: 60px 0 40px 0;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo__place_footer {
+  display: flex;
+  width: 183px;
+  height: 35px;
+
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0;
+}
+
+.footer__column_content_info {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading_title {
+  margin: 0 0 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.social-icon {
+  display: flex;
+  flex-direction: row;
+  margin: 0 0 10px;
+  align-items: center;
+}
+
+.social-icon__image {
+  margin-right: 10px;
+}
+
+.column-link {
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.social-link {
+  text-decoration: none;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+}
+
+.social-icon__image {
+  width: 16px;
+  height: 16px;
 }
