--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,4 +1,10 @@
 .video__iframe {
   margin: 0 5px 0;
   border: 0;
+  width: 516px;
+  height: 316px;
+}
+
+.video__iframe:last-child {
+  margin-right: 0;
 }
